resolve react-select value container extra spacing

--- a/packages/ee-ads-rhf/src/components/ReactSelectControl/components/InputAutoSelect/InputAutoSelect.scss
+++ b/packages/ee-ads-rhf/src/components/ReactSelectControl/components/InputAutoSelect/InputAutoSelect.scss
@@ -126,14 +126,14 @@
   }
 }
 
-.react-select__select__value-container {
+.react-select__value-container {
   align-items: center;
   box-sizing: border-box;
   display: grid;
   flex: 1 1 0%;
   flex-wrap: wrap;
+  gap: 12px 6px;
   overflow: hidden;
-  padding: 2px 8px;
   position: relative;
 
   &--has-value {
@@ -143,7 +143,6 @@
     flex: 1 1 0%;
     flex-wrap: wrap;
     overflow: hidden;
-    padding: 2px 8px;
     position: relative;
   }
 
@@ -154,7 +153,6 @@
     flex: 1 1 0%;
     flex-wrap: wrap;
     overflow: hidden;
-    padding: 2px 8px;
     position: relative;
   }
 }
@@ -181,10 +179,6 @@
   box-sizing: border-box;
   display: flex;
   font-family: var(--ams-typography-font-family);
-  /* Uncomment if using design-system compact mode */
-  /* margin: 1px 8px 1px -2px; */
-  /* comment if using design-system compact mode */
-  margin: var(--ams-column-gap-x-small) 8px var(--ams-column-gap-x-small) -2px;
   min-width: 0;
 }
 
